--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ pandas==2.2.2
 psycopg2==2.9.9
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+python-decouple==3.1
 pytz==2024.1
 requests==2.31.0
 scikit-learn==1.2.2
