--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,8 @@ numpy==1.26.4
 pandas==2.2.2
 psycopg2==2.9.9
 python-dateutil==2.9.0.post0
+python-decouple==3.8
 python-dotenv==1.0.1
-python-decouple==3.1
 pytz==2024.1
 requests==2.31.0
 scikit-learn==1.2.2
@@ -22,3 +22,4 @@ threadpoolctl==3.5.0
 typing_extensions==4.11.0
 tzdata==2024.1
 urllib3==2.2.1
+xgboost==2.0.3
